tests/baselines/reference/classExtendsClauseClassNotReferringConstructor.errors.txt
classExtendsClauseClassNotReferringConstructor.ts(4,21): error TS2507: Type 'number' is not a constructor function type.


==== classExtendsClauseClassNotReferringConstructor.ts (1 errors) ====
    class A { a: number; }
    module Foo {
        var A = 1;
        class B extends A { b: string; }
                        ~
!!! error TS2507: Type 'number' is not a constructor function type.
    }
    